--- a/Ordermanage/src/main/resources/templates/index.html
+++ b/Ordermanage/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
                 </form>
             </div>
         </div>
-        <a href="order/" id="btnsearch1" class="btn mb-2">ดำเนินการต่อ</a>
+        <a href="https://shopee2.herokuapp.com/detailorder/" id="btnsearch1" class="btn mb-2">ดำเนินการต่อ</a>
     </div>
 
 </body>
